--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FaceMessage</string>
     <string name="username">username</string>
     <string name="password">password</string>
+    <string name="register">Please enter the register info</string>
 </resources>
