--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="username">username</string>
     <string name="password">password</string>
     <string name="register_info">Please enter the register info</string>
-    <string name="login">Login In</string>
+    <string name="login">Login in</string>
     <string name="register">Register</string>
+    <string name="register_rePwd">Confirm password</string>
 </resources>
