--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="take_photo">Take</string>
     <string name="register_commit">Confirm</string>
     <string name="register_back">Back</string>
+    <string name="button_message">Message</string>
+    <string name="button_send">Send</string>
+    <string name="button_setting">Setting</string>
 </resources>
